@@ -1,3 +1,8 @@
+2006-10-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gmain.c: Fix typos in doc comments.  
+	(#358421, Tom Tromey)
+
 2006-09-30  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/pltcheck.sh: A script to check PLT entries.
